fixing padding on mobile nav items

--- a/css/main.css
+++ b/css/main.css
@@ -174,7 +174,7 @@ input {-webkit-appearance: none !important;}
 .mobile-emphasis i {vertical-align: text-top; margin-left: 1rem; font-size: 2rem;}
 .mobile-emphasis {background: #4a4948; color: #FFFFFF !important;}
 .accordion h3 {margin: 0;}
-.accordion h3 a {text-transform: none; font-size: 1.6rem; font-weight: 100; margin-top: 0; padding: 1rem 1.8rem; border-bottom: none;}
+.accordion h3 a {text-transform: none; font-size: 1.6rem; font-weight: 100; margin-top: 0; padding: 1rem 1.8rem; border-bottom: 1px solid transparent;}
 .accordion li a {background: #262524; border-bottom: 1px solid #262524; border-top: 1px solid #262524;}
 .accordion i {margin-left: 1rem; vertical-align: bottom;}
 .ui-accordion-content {padding: 0 1.8rem; margin: 0 -1.8rem;}
@@ -183,6 +183,8 @@ input {-webkit-appearance: none !important;}
 .accordion .ui-state-default .fa-chevron-down {display: none;}
 .accordion .ui-state-active .fa-chevron-down {display: inline-block;}
 .sub-accordion h3 a {text-transform: uppercase; font-size: 1.4rem; font-weight: 400;}
+.sub-accordion .more-links {padding: 1.2rem 1.8rem; border: none;}
+.sub-accordion li a {border: none;}
 
 /* Slider */
 
